BF: index page now works.

--- a/codequiz-server/quiz/static/tasks/style.css
+++ b/codequiz-server/quiz/static/tasks/style.css
@@ -6,7 +6,7 @@ li a {
     border:1px outset gray;
     margin:.5em;
     padding:.5em;
-    background-color:#efd;
+    background-color:#eee;
     
 }
 
