--- a/codequiz-server/quiz/static/tasks/style.css
+++ b/codequiz-server/quiz/static/tasks/style.css
@@ -23,7 +23,7 @@ background-image: -webkit-linear-gradient(#eaeaea 0%, #fafafa 100%);
 background-image: -ms-linear-gradient(#eaeaea 0%, #fafafa 100%); 
 background-image: -o-linear-gradient(#eaeaea 0%, #fafafa 100%); 
 background-image: -moz-linear-gradient(#fafafa 0%, #fdfdfd 100%); 
-background-image: linear-gradient(#fafafa 0%, #fdfdfd 100%); 
+background-image: linear-gradient(#eaeaea 0%, #fdfdfd 100%); 
     
 }
 
