NF: Test (Task Collection) runs from beginning to end

--- a/codequiz-server/quiz/templates/tasks/task_buttons1.html
+++ b/codequiz-server/quiz/templates/tasks/task_buttons1.html
@@ -1,6 +1,6 @@
 {% if button_type == "next" %}
-<input type="submit" name="{{button_type}}" value="Weiter" />
-{% elif button_type == "solution" %}
-<input type="submit" name="{{button_type}}" value="Loesung" />
+<input type="submit" name="{{button_type}}" value="Next" />
+{% elif button_type == "result" %}
+<input type="submit" name="{{button_type}}" value="Result" />
 {% endif %}
 
