--- a/codequiz-server/quiz/templates/tasks/tc_run.html
+++ b/codequiz-server/quiz/templates/tasks/tc_run.html
@@ -1,7 +1,5 @@
-{% load staticfiles %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
-
+{% extends "tasks/base.html" %}
+{% block content %}
 
 <div class="klasse1">
 TEST: {{ tc_title }}
@@ -9,3 +7,5 @@ TEST: {{ tc_title }}
 </div>
 
 {{ task_id }}
+
+{% endblock %}
