--- a/codequiz-server/quiz/templates/tasks/task_detail.html
+++ b/codequiz-server/quiz/templates/tasks/task_detail.html
@@ -1,43 +1,35 @@
-<!-- For a single Task (outside of a test)-->
-{% load staticfiles %}
+{# For a single Task (outside of a test) #}
 
-<link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
-
+{% extends "tasks/base.html" %}
+{% block content %}
 
 <form action="{% url 'quiz_ns:task_form_process' task.id %}" method="post">
 {% csrf_token %}
 
 <div class="task1">
-<h2>{{ task.title }}
-<div class="small">
-by {{ task.author }}
-</div>
-</h2>
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+    <h2>{{ task.title }}</h2>
 
+    {% if error_message %}
+        <p><strong>{{ error_message }}</strong></p>
+    {% endif %}
 
-{% for s in strings %}
-
+    {% for s in strings %}
         {{s|safe}}
-        
-{% endfor %}
+    {% endfor %}
 
-<span style="display: block; text-align: right;">
-{%for bs in button_strings%}
+    <span style="display: block; text-align: right;">
+    {% for bs in button_strings %}
+        {{bs|safe}}
+    {% endfor %}
+    </span>
+    <br>
+    <br><br>
 
-{{bs|safe}}
-
-{% endfor %}
-</span>
-<br>
-<br><br>
-
-Tags:
-{% for tag in task.tag_list %}
-     <span class="tags">{{tag}}</span>
-{% endfor %}
-
-
-
+    Tags:
+    {% for tag in task.tag_list %}
+         <span class="tags">{{tag}}</span>
+    {% endfor %}
 </div>
 </form>
+
+{% endblock %}
