save status quo before rewriting the templates

--- a/codequiz-server/quiz/templates/tasks/index.html
+++ b/codequiz-server/quiz/templates/tasks/index.html
@@ -1,3 +1,4 @@
+<!-- ==> start: index.html -->
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
@@ -16,3 +17,4 @@ Aufgabenliste
 {% else %}
     <p>No tasks are available.</p>
 {% endif %}
+<!-- ==> end: index.html -->
