--- a/codequiz-server/quiz/templates/tasks/le_list.html
+++ b/codequiz-server/quiz/templates/tasks/le_list.html
@@ -1,3 +1,4 @@
+<!-- ==> start: le_list.html -->
 {% load staticfiles %}
 {# is this line neccessary?#}
 
@@ -35,3 +36,4 @@
 
 
 </div>
+<!-- ==> end: le_list.html -->
