--- a/codequiz-server/quiz/templates/tasks/src.html
+++ b/codequiz-server/quiz/templates/tasks/src.html
@@ -1,3 +1,4 @@
+<!-- ==> start: src.html -->
 {% if multiline %}
 <pre class="src1">
 {{text}}
@@ -5,3 +6,4 @@
 {% else %}
 <span class="src"> {{text}} </span>
 {% endif %}
+<!-- ==> end: src.html -->
