--- a/codequiz-server/quiz/templates/tasks/task_collection.html
+++ b/codequiz-server/quiz/templates/tasks/task_collection.html
@@ -1,3 +1,4 @@
+<!-- ==> start: task_collection.html -->
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
@@ -24,3 +25,4 @@ Tasks:
 {% else %}
     <p>No tasks are available.</p>
 {% endif %}
+<!-- ==> end: task_collection.html -->
