--- a/codequiz-server/quiz/templates/tasks/task_detail.html
+++ b/codequiz-server/quiz/templates/tasks/task_detail.html
@@ -1,3 +1,4 @@
+<!-- ==> start: task_detail.html -->
 <!-- For a single Task (outside of a test)-->
 {% load staticfiles %}
 
@@ -41,3 +42,4 @@ Tags:
 
 </div>
 </form>
+<!-- ==> end: task_detail.html -->
