--- a/codequiz-server/quiz/templates/tasks/tc_run.html
+++ b/codequiz-server/quiz/templates/tasks/tc_run.html
@@ -1,3 +1,4 @@
+<!-- ==> start: tc_run.html -->
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
@@ -9,3 +10,4 @@ TEST: {{ tc_title }}
 </div>
 
 {{ task_id }}
+<!-- ==> end: tc_run.html -->
