--- a/codequiz-server/quiz/templates/tasks/tc_run_task_detail.html
+++ b/codequiz-server/quiz/templates/tasks/tc_run_task_detail.html
@@ -1,3 +1,4 @@
+<!-- ==> start: tc_run_task_detail.html -->
 <!--For a task as an element of a test (TaskCollection) -->
 {% load staticfiles %}
 
@@ -31,3 +32,4 @@
 
 </div>
 </form>
+<!-- ==> end: tc_run_task_detail.html -->
