--- a/codequiz-server/quiz/templates/tasks/txt.html
+++ b/codequiz-server/quiz/templates/tasks/txt.html
@@ -1,3 +1,4 @@
+<!-- ==> start: txt.html -->
 {% if multiline %}
 <div class="normal">
 {{text|safe}}
@@ -6,3 +7,4 @@
 {{text|safe}}    
 {% endif %}
 
+<!-- ==> end: txt.html -->
