--- a/codequiz-server/quiz/templates/tasks/part_input_list.html
+++ b/codequiz-server/quiz/templates/tasks/part_input_list.html
@@ -1,3 +1,4 @@
+<!-- ==> start: part_input_list.html -->
 {% load staticfiles %}
 {# is this line neccessary?#}
 
@@ -44,3 +45,4 @@
 
 
 </div>
+<!-- ==> end: part_input_list.html -->
