--- a/codequiz-server/quiz/templates/tasks/tc_run_final.html
+++ b/codequiz-server/quiz/templates/tasks/tc_run_final.html
@@ -1,3 +1,4 @@
+<!-- ==> start: tc_run_final.html -->
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
@@ -17,3 +18,4 @@ In  further versions of this web application you will see some information about
 </div>
 
 
+<!-- ==> end: tc_run_final.html -->
