--- a/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
+++ b/codequiz-server/quiz/templates/tasks/cq1_task_meta.html
@@ -1,17 +1,19 @@
 <!-- content of one single task  -->
 
-
-
-<h2>Task-Meta-Infos (Task#{{ task.id }})</h2>
+<h2>Task-Meta-Infos</h2>
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-<br><br>
-<b>{{task.title}}</b>
 
+<table>
+<tr><td>Title</td><td width="10px"></td><td>"{{task.title}}"</td></tr>
+<tr><td>ID:</td><td></td><td>{{task.id}}</td></tr>
+<tr><td>Author</td><td></td><td>{{task.author}}</td></tr>
+<tr><td>Version</td><td></td><td>...</td></tr>
+<tr><td>Last changed</td><td></td><td>...</td></tr>
+<tr><td>Difficulty</td><td></td><td>...</td></tr>
+<tr><td>Didactic Quality</td><td></td><td>...</td></tr>
+<tr><td>Feedback</td><td></td><td>...</td></tr>
+</table>
 
-<!--  maybe a table would be better here-->
-<ul>
-            <li>ID: {{task.id}}</li>
-            <li>Author: {{task.author}}</li>
-            <li>Difficulty: ...</li>
-            <li>Didactic Quality: ...</li>
-</ul>
+Tags: ...
+<br>
+
