clean up, refactor
Apply code style.
Renamed a few very short variable names to make some sense.
Fixed typos.
Changed URL scheme a little bit

--- a/codequiz-server/quiz/static/tasks/style2.css
+++ b/codequiz-server/quiz/static/tasks/style2.css
@@ -65,7 +65,15 @@ a4aeb8 bg
 
  
  
- */ 
+ */
+
+.css_version
+{
+    font-size: 50%;
+    color: #F90;
+    /*color: #FFC875;*/
+    font-weight: normal;
+}
 
 #headerleft h1 span
 {
