--- a/codequiz-server/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main.html
@@ -18,12 +18,12 @@
 <div id="container">
 	<div id="headercont">
 		<div id="headerleft">
-			<h1>Code<span>Quiz</span><css_version>beta 0.2</css_version></h1>
+			<h1>Code <span class="css_version">Quiz beta 0.2</span></h1>
 		</div>
 		<div id="headerright">
 			<ul>
-                <li><a title="home" href="index.html">home</a></li>
-				<li><a class="active" title="quiz" href="index.html">quiz</a></li><li>|</li>
+                <li><a title="home" href="/">home</a></li>
+				<li><a class="active" title="quiz" href="{% url 'quiz_ns:task_collection_view' 2 %}">quiz</a></li><li>|</li>
 				<li><a title="about" href="index.html">about</a></li><li>|</li>
 				<li><a title="admin" href="index.html">admin</a></li><li>|</li>
 				<li><a title="link four" href="index.html">Link Four</a></li><li>|</li>
