--- a/codequiz-server/quiz/templates/tasks/task_collection.html
+++ b/codequiz-server/quiz/templates/tasks/task_collection.html
@@ -1,27 +1,28 @@
 <!-- ==> start: task_collection.html -->
 {% load staticfiles %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}"/>
 
 
 <div class="klasse1">
-Test: {{ tc.title }}
-<br>
-<div class="small">
-Author: {{ tc.author }}
-</div>
+    Test: {{ tc.title }}
+    <br/>
+
+    <div class="small">
+        Author: {{ tc.author }}
+    </div>
 
 </div>
 
 {% if task_list %}
-Tasks:
+    Tasks:
     <ol>
-    {% for task in task_list %}
-        <li>{{ task.title }}</li>
-    {% endfor %}
+        {% for task in task_list %}
+            <li>{{ task.title }}</li>
+        {% endfor %}
     </ol>
     <br>
-    <a href="{% url 'quiz_ns:tc_run_view' tc.id 0 %}">Start this test!</a></li>
+    <a href="{% url 'quiz_ns:tc_run_view' tc.id 0 %}">Start this test!</a>
 {% else %}
     <p>No tasks are available.</p>
 {% endif %}
