--- a/codequiz-server/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main.html
@@ -16,11 +16,11 @@
 <body>
 
 <div id="container">
-	<div id="headercont">
-		<div id="headerleft">
+	<div id="header_container">
+		<div id="header_left">
 			<h1>Code <span class="css_version">Quiz beta 0.2</span></h1>
 		</div>
-		<div id="headerright">
+		<div id="header_right">
 			<ul>
                 <li><a title="home" href="/">home</a></li>
 				<li><a class="active" title="quiz" href="{% url 'quiz_ns:task_collection_view' 2 %}">quiz</a></li><li>|</li>
@@ -32,59 +32,59 @@
 		</div>
 	</div>
 	
-	<div id="maincont">
-		<div id="mainleft">
+	<div id="main_container">
+		<div id="main_left">
 		
-{% for mb in main_blocks %}
-<!-- Block _ save -->
-        {{mb|safe}}
-<br>        
-{% endfor %}
+            {% for mb in main_blocks %}
+            <!-- Block _ save -->
+                {{mb|safe}}
+            <br/>
+            {% endfor %}
 		
 		</div>
 		
-<!-- End of mainleft -->
+        <!-- End of main_left -->
 
-		<div id="mainright">
+		<div id="main_right">
 
-{% for mb in meta_blocks %}
-<!-- Meta-Block _ save -->
-        {{mb|safe}}
-<br>        
-{% endfor %}		
-		<!--
-			<h2>Task-Infos-Statisch</h2>
-            <ul><li> ID, (Author), Version ...</li>
-            <li>Difficulty: ...</li>
-            <li>Didactic Quality: ...</li>
-            </ul>
-            
-			<p><strong>
-			Proin magna erat, accumsan.</strong></p>
-			<p>Ut a orci. Vivamus a felis ac neque dictum fermentum. Aliquam 
-			quam erat, dapibus a, blandit ac, posuere at, eros.</p>
-			
-			<h2>Collection Infos</h2>
-			<p><strong>Name der Aufgabensammlung</strong></p>
-			<p>Kurze Beschreibung. Vivamus a felis ac neque dictum fermentum. Aliquam 
-			quam erat, dapibus a, blandit ac, posuere at, eros.</p>
-			<p>Donec erat. Suspendisse posuere orci placerat urna. Nunc posuere, 
-			diam et ultricies ultricies, lectus elit viverra leo, in porta leo 
-			libero vel eros.</p>-->
+            {% for mb in meta_blocks %}
+            <!-- Meta-Block _ save -->
+                {{mb|safe}}
+            <br/>
+            {% endfor %}
+            <!--
+                <h2>Task-Infos-Statisch</h2>
+                <ul><li> ID, (Author), Version ...</li>
+                <li>Difficulty: ...</li>
+                <li>Didactic Quality: ...</li>
+                </ul>
+
+                <p><strong>
+                Proin magna erat, accumsan.</strong></p>
+                <p>Ut a orci. Vivamus a felis ac neque dictum fermentum. Aliquam
+                quam erat, dapibus a, blandit ac, posuere at, eros.</p>
+
+                <h2>Collection Infos</h2>
+                <p><strong>Name der Aufgabensammlung</strong></p>
+                <p>Kurze Beschreibung. Vivamus a felis ac neque dictum fermentum. Aliquam
+                quam erat, dapibus a, blandit ac, posuere at, eros.</p>
+                <p>Donec erat. Suspendisse posuere orci placerat urna. Nunc posuere,
+                diam et ultricies ultricies, lectus elit viverra leo, in porta leo
+                libero vel eros.</p>-->
 			
 		</div>
 		
 		
-<!-- End of mainright -->
+        <!-- End of main_right -->
 		
 		<div id="bottom"></div>
 	</div>
 	
-	<div id="footercont">
-		<div id="footerleft">
+	<div id="footer_container">
+		<div id="footer_left">
 			<p><a title="back to top" href="#container"><strong>^ back to top</strong></a></p>
 		</div>
-		<div id="footerright">
+		<div id="footer_right">
 			<p><a title="derby web design" href="http://www.tristarwebdesign.co.uk">template by <strong>tristar</strong></a></p>
 		</div>
 	</div>
