--- a/codequiz-server/quiz/templates/tasks/tc_run_task_detail.html
+++ b/codequiz-server/quiz/templates/tasks/tc_run_task_detail.html
@@ -2,34 +2,37 @@
 <!--For a task as an element of a test (TaskCollection) -->
 {% load staticfiles %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'tasks/style.css' %}"/>
 
 
 <form action="{% url 'quiz_ns:tc_run_form_process' tc.id ID %}" method="post">
-{% csrf_token %}
+    {% csrf_token %}
 
-<div class="task1">
-<h3>{{ tc.title }} : Task {{ ID|add:1 }}/{{ LEN }}</h3>
-<h2>{{ task.title }}<div class="small">by {{ task.author }}</div></h2>
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-<br><br>
+    <div class="task1">
+        <h3>{{ tc.title }} : Task {{ ID|add:1 }}/{{ LEN }}</h3>
 
-{% for s in html_strings %}
+        <h2>{{ task.title }}<span class="small">by {{ task.author }}</span></h2>
 
-        {{s|safe}}
-<br>        
-{% endfor %}
+        {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+        <br/>
+        <br/>
 
-<br>
-<span style="display: block; text-align: right;">
-{%for bs in button_strings%}
+        {% for s in html_strings %}
 
-{{bs|safe}}
+            {{ s|safe }}
+            <br/>
+        {% endfor %}
 
-{% endfor %}
-</span>
-<br>
+        <br/>
+        <span style="display: block; text-align: right;">
+        {% for bs in button_strings %}
 
-</div>
+            {{ bs|safe }}
+
+        {% endfor %}
+        </span>
+        <br/>
+
+    </div>
 </form>
 <!-- ==> end: tc_run_task_detail.html -->
