--- a/codequiz-server/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main.html
@@ -25,7 +25,7 @@
                 <li><a title="home" href="/">home</a></li>
 				<li><a class="active" title="quiz" href="{% url 'quiz_ns:task_collection_view' 2 %}">quiz</a></li><li>|</li>
 				<li><a title="about" href="index.html">about</a></li><li>|</li>
-				<li><a title="admin" href="index.html">admin</a></li><li>|</li>
+				<li><a title="admin" href="/admin/">admin</a></li><li>|</li>
 				<li><a title="link four" href="index.html">Link Four</a></li><li>|</li>
 				
 			</ul>
